some mobile styling to kontakt

--- a/Template/kontakt.html
+++ b/Template/kontakt.html
@@ -66,9 +66,10 @@
                 <br><br><br><p>Hilsen Juan Carlos Pequeno</p>
               </div>
         </div>
-
+      </section>
+      <section class="row">
         <div class="container">
-          <div id="kontakt" class="box full dark" >
+          <div class="box full dark">
             <div class="text-wrapper">
               <h3>Be om pristilbud</h3>
               <p>Hva ønsker du pristilbud på?</p>
@@ -103,10 +104,13 @@
                 <p>Legg igjen din kontaktinformasjon, så tar vi kontakt så snart som mulig.</p>
                 <input type="text" id="name" name="navn"value="Ditt navn"/>
                 <label for="name">Ditt navn</label>
+
                 <input type="tel" id="number" name="telefonnummer" value="Ditt telefonnummer"/>
                 <label for="number">Ditt telefonnummer</label>
+
                 <input type="email" id="email" name="epost" value="Din e-postadresse"/>
                 <label for="email">Din e-postadresse</label>
+
                 <div class="midstiltKnapp">
                 <a id="send" href="#" name="submit" class="button wide">Send prisforespørsel</a>
                 </div>
