--- a/Template/css/style_kontakt.css
+++ b/Template/css/style_kontakt.css
@@ -1,3 +1,9 @@
+/*general styles*/
+.left {
+  float:left;
+}
+
+/* Typography & color */
 
 .box p, .box h3 {
   text-align: center;
@@ -10,58 +16,61 @@
   margin: 2rem;
 }
 
-h3:nth-of-type(2) {
-  margin-top: 14rem;
+/*intro styles*/
+#handskrift {
+  width: 30%;
+  float: left;
 }
 
-.intro {
-  overflow: auto;
+p.phone {
+  display: inline-block;
+  font-size: 1.8rem;
 }
 
-a.button::before {
-  content: none;
-}
-
-a.button {
-  width: 240px;
-}
-
+/*box placement*/
 #kontakt {
   margin-left: 0;
+}
+
+/*box header placement*/
+h3:nth-of-type(2) {
+  margin-top: 14rem;
 }
 
 .box > .text-wrapper {
   padding: 4rem 6rem;
 }
 
-.left {
-  float:left;
+/*makes intro background continue past box.
+TODO: change to make light grey field?*/
+.intro {
+  overflow: auto;
 }
 
-p.phone {
-  display: inline-block;
-  font-size: 1.8rem;
-
+/*catering and cantine buttons*/
+a.button::before {
+  content: none;
 }
 
-#handskrift {
-  width: 30%;
-  float:left;
+/*TODO fix js for changing form
+a.button:active {
+  background: transparent;
+  border: 2px white;
 }
+
+a.button:hover, .box a.button:focus {
+  background: #3cc;
+  color: #fff;
+}
+*/
 
 a.button {
+  width: 240px;
   text-align: center;
-
-}
-
-a.button.left {
   margin: 2rem auto;
 }
 
-a.button.right {
-  margin: 2rem auto;
-}
-
+/*form styling*/
 form {
   position: relative;
   margin : 0 auto;
@@ -94,6 +103,7 @@ textarea {
   border-radius: 0;
 }
 
+/*class for div behind selectfield with pic for arrow*/
 .styledSelect{
   margin: 0.5rem auto 1rem;
   box-sizing: border-box;
@@ -104,22 +114,19 @@ textarea {
   float: right;
   display: inline;
 }
-/*TODO få teksten i midten */
 
 .styledSelect select{
-  background: transparent;
   box-sizing: border-box;
+  -webkit-appearance: none;
+  background: transparent;
+  float: right;
   font-size: 1rem;
   font-family: 'Lato', sans-serif;
   color: #3d3d3d;
-  width: 250px;
+  width: 240px;
   padding: 1rem;
-
   border: 0;
   border-radius: 0;
-  float: right;
-  -webkit-appearance: none;
-
 }
 
 #name, #number, #email {
@@ -128,29 +135,31 @@ textarea {
   margin: 1rem auto;
 }
 
-input.right {
-  float:right;
-}
-
+/*removes labels*/
 label {
   display: none;
 }
 
-.midtstiltKnapp {
-  margin: auto;
-  position: relative;
-}
-a#send.button.wide {
-  margin: 4rem auto;
-  font-size: 20;
-  padding: 0;
-}
-
+/*screens larger than 960px*/
 
 @media screen and (min-width: 960px){
+
+  /*center submit button*/
+  .midtstiltKnapp {
+    width: 100%;
+    overflow: auto;
+  }
+
+  .button.wide {
+    margin: 4rem 160px;
+    font-size: 20;
+    padding: 0;
+  }
+
   .mailto {
   text-align: right;
   }
+
   #introtext {
     max-width: 60%;
     float:left;
@@ -163,4 +172,39 @@ a#send.button.wide {
     margin: 2rem auto;
     text-align: center;
   }
+
+  input.right {
+    float:right;
+  }
+
+}
+
+@media screen and (max-width: 960px){
+  .box{
+    padding:0;
+  }
+
+  .button.wide {
+    margin: 4rem auto;
+    font-size: 20;
+    padding: 0;
+  }
+
+  .box p, .box h3 {
+    text-align: left;
+    margin: 2rem auto 2rem;
+    line-height: normal;
+  }
+
+  .styledSelect{
+    float: left;
+  }
+  .styledSelect select{
+    float: left;
+  }
+
+  input {
+    width: 100%;
+  }
+
 }
