--- a/Template/catering.html
+++ b/Template/catering.html
@@ -37,7 +37,7 @@
         color: #999999; /*TO DO en lysegrå, bruker vi en annen en annen plass?*/
       }
 
-      a#buttonLastNed{
+      a#buttonDownload{
         float:right
       }
 
@@ -56,7 +56,7 @@
       }
 
       /*TO DO er dette grei måte å ordne det på? Eller bør ha samme regel på alle knappene?*/
-      p#lastNed{
+      p#download{
         display: inline-block;
         width:50%; /*TO DO hvis veldig smal skjerm, så gjør dette at knappen hopper ned, hvordan fikse?*/
         margin: 0;
@@ -65,98 +65,68 @@
       ul.tabMenu{
         list-style-type: none;
         margin-right: 0;
-        padding:0; /* TO DO trenger margin og padding her? */
+        padding:0;
         overflow: hidden; /*TO DO hvorfor denne her?*/
         margin: auto;
       }
 
+      /* Float all list-elements on one horizontal line and center*/
       ul.tabMenu li {
-        float: left;
+        display: inline-block;
+        float: none;
       }
-/*
+
+      /* Styling of the different modes for links in the tabbed menu panel*/
       ul.tabMenu li a {
         display: inline-block;
-        color: grey;
-        text-align: center; /* TO DO trenger denne?
-        padding: 1rem 3.69rem; /*TO DO er det en bedre måte å plassere disse på? Dette bør gjøres forskjellig fra mobil til desktop!
-        border-bottom: 0;
-      } */
-
-      /* TO DO 2 ??
-      ul.tabMenu li a {
-        width: 0;
-        background-color: red;
-        height: 20px;
-        border-bottom: 10px solid red;
-      }*/
-/*
-      ul.tabMenu li a:hover, ul.tabMenu li a:focus{
-        /*TO DO hvis trengs
-        color: white;
         font-weight: bold;
-        border-bottom: 6px solid #099;
+        color: grey; /*TO DO endre til riktig gråfarge*/
+        border-bottom: 0;
+        height: 3rem;
+        padding: 0 3.2rem;
+        line-height: 3rem;
+        letter-spacing: .05em;
+        transition: .2s color;
       }
-      ul.tabMenu li a:active{
-        /*TO DO
+
+      /* Styling of the animated line beneath the text in the tabbed menu panel */
+      ul.tabMenu li a::after {
+        content: '';
+        display: block;
+        height: 6px;
+        background: #3cc;
+        margin: -.3em auto 0;
+        width: 0;
+        transition: .2s width;
+      }
+
+      /* Styling of the different modes for links in tabbed menu panel*/
+      ul.tabMenu li a:active,
+      ul.tabMenu li a:hover,
+      ul.tabMenu li a.isActive, /* active page class */
+      ul.tabMenu li a:focus {
         color: white;
-        border-bottom: 15px solid #099;
-        background-color: red;
-*/
-
-/*TO DO Kopiert inn alle stylene fra style.css klarer vi å ikke gjøre dette dobbelt?*/
-
-        /* Styling of the different modes for links in the tabbed menu panel*/
-        ul.tabMenu li a {
-          display: inline-block;
-          font-weight: bold;
-          color: grey; /*TO DO endre til riktig gråfarge*/
-          border-bottom: 0;
-          height: 3rem;
-          padding: 0 3rem;
-          line-height: 3rem;
-          letter-spacing: .05em;
-          transition: .2s color;
-        }
-
-        /* Styling of the animated line beneath the text in the tabbed menu panel */
-        ul.tabMenu li a::after {
-          content: '';
-          display: block;
-          height: 6px;
-          background: #3cc;
-          margin: -.3em auto 0;
-          width: 0;
-          transition: .2s width;
-        }
-
-        /* TO DO: style the initial state of menu 1*/
-
-        /* Styling of the different modes for links in tabbed menu panel*/
-        ul.tabMenu li a:active,
-        ul.tabMenu li a:hover,
-        ul.tabMenu li a:active, /* active page class */
-        ul.tabMenu li a:focus {
-          color: white;
-        }
-
-        /* The line beneath the links in the tabbed menu panel goes to full width */
-        ul.tabMenu li a:active::after,
-        ul.tabMenu li a:hover::after,
-        ul.tabMenu li a:active::after, /* active page class */
-        ul.tabMenu li a:focus::after {
-          width: 100%;
-        }
-
-        /* TO DO ? Får ikke rekke frem til denne slik at den som er valgt som default option er stylet hvit*/
-        ul.tabMenu li a:focus, .active {
-          color: white;
-        }
-
-        /*The content is initially not shown */
-        .tabContent{
-          display:none;
-        }
       }
+
+      /* The line beneath the links in the tabbed menu panel goes to full width */
+      ul.tabMenu li a:active::after,
+      ul.tabMenu li a:hover::after,
+      ul.tabMenu li a.isActive::after, /* active page class */
+      ul.tabMenu li a:focus::after {
+        width: 100%;
+      }
+
+      /*The content is initially not shown */
+      .tabContent{
+        display:none;
+      }
+
+      /*To fix the pattern overlay to correct place*/
+      .dark::before{
+        left: 0;
+        top: 0;
+      }
+    }
 
       /* TO DO: legg til informasjon hvis trengs*/
       /* Layout for screens larger than 960px
@@ -209,12 +179,12 @@
           <div class="text-wrapper">
             <h3>Meny - catering </h3>
 
-            <!-- TO DO: Kommenter JAVASCRIPTDELEN menyen -->
+            <!-- A tabbed panel showing the different menus provided -->
             <div id="menus">
               <ul class="tabMenu">
-                <!-- TO DO: skriv forklaring hva linkene betyr-->
+                <!-- A horizontal list for the Menu titles. The javascript:void(0) is added to tell the javascript to stay on the same page when the link is clicked -->
                 <li> <a href="javascript:void(0)" class="menuLinks" onclick="openMenu(event, 'meny1')" id="defaultOpen"> Meny 1 </a> </li>
-                <li> <a href="javascript:void(0)" class="menuLinks" onclick="openMenu(event, 'meny2')"> Meny 2 </a> </li>
+                <li> <a href="javascript:void(0)" class="menuLinks" onclick="openMenu(event, 'meny2')" > Meny 2 </a> </li>
                 <li> <a href="javascript:void(0)" class="menuLinks" onclick="openMenu(event, 'meny3')"> Meny 3 </a> </li>
               </ul>
             </div>
@@ -280,8 +250,8 @@
         <div class="box full tight">
           <div class="text-wrapper">
             <h4> Nedlastbar meny </h4>
-            <p id="lastNed"> Lorem ipsum dolor sit amet consectetuer adipliscing elit </p>
-            <a href="#" class="button" id="buttonLastNed">
+            <p id="download"> Lorem ipsum dolor sit amet consectetuer adipliscing elit </p>
+            <a href="#" class="button" id="buttonDownload">
               <!-- An svg icon inside the button-->
               <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                   <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
@@ -309,9 +279,6 @@
         <img src="img/dacarlo_logo.png" alt="logo" class="smallLogo">
         <p id="footerCopyright">2016 © Da Carlo Catering</p>
       </div>
-
-      <!-- TO DO including the footer as its own html -->
-    <!--  <object name="footer" type="text/html" data="footer.inc"> </object> -->
     </footer>
 
     <!-- include javascript files in end of body, so we don't have to care
