--- a/Template/css/style_kontakt.css
+++ b/Template/css/style_kontakt.css
@@ -3,28 +3,31 @@
   float:left;
 }
 
-/* Typography & color */
-
+/* special box typography */
 .box p, .box h3 {
-  text-align: center;
-  margin: 4rem auto 2rem;
+  text-align: left;
+  margin: 2rem auto;
+  line-height: normal;
 }
 
 .box p {
   font-style: italic;
-  font-family: 'Lora';
-  margin: 2rem;
-}
-
-/*intro styles*/
-#handskrift {
-  width: 30%;
-  float: left;
+  font-family: 'Lora', serif;
 }
 
 p.phone {
-  display: inline-block;
   font-size: 1.8rem;
+}
+
+/*placement of phone and signature in intro*/
+#signature-wrapper {
+  width: 100%;
+  overflow: auto;
+}
+
+#signature {
+  width: 240px;
+  float: left;
 }
 
 /*box placement*/
@@ -32,42 +35,54 @@ p.phone {
   margin-left: 0;
 }
 
-/*box header placement*/
-h3:nth-of-type(2) {
-  margin-top: 14rem;
-}
-
-.box > .text-wrapper {
-  padding: 4rem 6rem;
-}
-
 /*makes intro background continue past box.
-TODO: change to make light grey field?*/
+TODO: make light grey field?*/
 .intro {
   overflow: auto;
 }
 
-/*catering and cantine buttons*/
-a.button::before {
-  content: none;
+/*fix for making texture align properly.
+TODO needs changing, wait for style.css fix by Leon*/
+.box {
+  padding: 0rem;
 }
 
-/*TODO fix js for changing form
-a.button:active {
-  background: transparent;
-  border: 2px white;
+/*box header placement*/
+.box > .text-wrapper {
+  padding: 2rem;
 }
 
-a.button:hover, .box a.button:focus {
-  background: #3cc;
-  color: #fff;
-}
-*/
-
+/*tabbed catering and cantine buttons
+================================*/
 a.button {
   width: 240px;
   text-align: center;
   margin: 2rem auto;
+}
+
+a.button.left {
+  margin-right: 1rem;
+  margin-bottom: 0;
+}
+
+/*remove arrows*/
+a.button::before {
+  content: none;
+}
+
+.box a.isActive, .box a:active{
+  background: transparent;
+  border: 2px solid white;
+  color: white;
+}
+
+.box a.button:focus {
+  background: transparent;
+}
+
+/*The forms are initially not shown */
+.tabContent{
+  display:none;
 }
 
 /*form styling*/
@@ -76,10 +91,15 @@ form {
   margin : 0 auto;
 }
 
+/*remove labels*/
+label {
+  display: none;
+}
+
 input {
   font-size: 1rem;
   font-family: 'Lato', sans-serif;
-  width: 240px;
+  width: 100%;
   height: 60px;
   padding: 0.6rem 1rem;
   box-sizing: border-box;
@@ -97,6 +117,7 @@ textarea {
   background: #d8d8d8;
   color: #3d3d3d;
   padding: 1rem;
+  margin: 0.5rem auto;
   width: 100%;
   height: 8rem;
   border: 0;
@@ -105,57 +126,59 @@ textarea {
 
 /*class for div behind selectfield with pic for arrow*/
 .styledSelect{
-  margin: 0.5rem auto 1rem;
+  margin: 0.5rem auto;
   box-sizing: border-box;
   overflow: hidden;
   background: url(../img/new_arrow.png) no-repeat right #d8d8d8;
-  width: 240px;
   height: 60px;
-  float: right;
   display: inline;
+  float: left;
+  width: 100%;
 }
 
 .styledSelect select{
   box-sizing: border-box;
   -webkit-appearance: none;
   background: transparent;
-  float: right;
   font-size: 1rem;
   font-family: 'Lato', sans-serif;
   color: #3d3d3d;
-  width: 240px;
   padding: 1rem;
   border: 0;
   border-radius: 0;
-}
-
-#name, #number, #email {
-  display: block;
+  float: left;
   width: 100%;
-  margin: 1rem auto;
 }
 
-/*removes labels*/
-label {
-  display: none;
+#name, #number, #email, #companyName {
+  width: 100%;
+  margin: 0.5rem auto;
+}
+
+/*wrapper for submit button*/
+.btn-wrapper {
+  width: 100%;
+  overflow: auto;
+}
+
+#btnSubmit {
+  margin: 4rem auto;
+  font-size: 20;
+  padding: 0;
+}
+
+/*place kontakt and catering buttons side by side for screens larger than 598px*/
+@media screen and (min-width: 598px){
+  a.button.right {
+    float: right;
+  }
 }
 
 /*screens larger than 960px*/
-
 @media screen and (min-width: 960px){
-
-  /*center submit button*/
-  .midtstiltKnapp {
-    width: 100%;
-    overflow: auto;
-  }
-
-  .button.wide {
-    margin: 4rem 160px;
-    font-size: 20;
-    padding: 0;
-  }
-
+  /*Intro styles for big screen
+  ==============================
+  /*special placing of phone and email*/
   .mailto {
   text-align: right;
   }
@@ -164,47 +187,45 @@ label {
     max-width: 60%;
     float:left;
   }
+
   p.phone {
     padding-top: 4rem;
   }
 
-  a.button {
-    margin: 2rem auto;
+  /*box styles for big screen
+  ===============================
+  /*pull box upwards*/
+  .row {
+    margin-top: -8rem;
+  }
+
+  /*edit box header placement*/
+  .box > .text-wrapper {
+    padding: 4rem 6rem;
+  }
+
+  /*h and p styling in box*/
+  .box h3, .box p {
     text-align: center;
   }
 
-  input.right {
-    float:right;
+  .box h3 {
+  margin: 4rem auto 2rem;
   }
 
-}
-
-@media screen and (max-width: 960px){
-  .box{
-    padding:0;
-  }
-
-  .button.wide {
-    margin: 4rem auto;
-    font-size: 20;
-    padding: 0;
-  }
-
-  .box p, .box h3 {
-    text-align: left;
-    margin: 2rem auto 2rem;
-    line-height: normal;
-  }
-
-  .styledSelect{
-    float: left;
-  }
-  .styledSelect select{
-    float: left;
-  }
-
+  /*form element styling*/
   input {
-    width: 100%;
+    width: 240px;
   }
 
+  .styledSelect, .styledSelect select {
+    width: 240px;
+    float: right;
+  }
+
+  /*submit button centering
+  TODO: fix centering. Make sure we don't want a <button> form element instead*/
+  #btnSubmit {
+    margin: 4rem 160px;
+  }
 }
