--- a/Template/kontakt.html
+++ b/Template/kontakt.html
@@ -46,27 +46,24 @@
     <main>
       <section class="intro">
         <div class="container">
-            <div class="text-wrapper">
-
-                <h2>Kontakt</h2>
-                <p id="introtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-                <div class="right">
-                  <p class="phone">
-                    +47 428 83 247
-                  </p>
-                  <p class="mailto">
-                    <a href="mailto:epost@epost.no">epost</a>
-                  </p>
-
+          <div class="text-wrapper">
+            <h2>Kontakt</h2>
+              <p id="introtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <!--TODO: remove space between number and mail-->
+              <div class="right">
+                <p class="phone">+47 428 83 247</p>
+                <p class="mailto">
+                  <a href="mailto:epost@epost.no">epost@epost.no</a>
+                </p>
               </div>
             </div>
-              <div class="left">
-                <img id="handskrift" src="img/marlene.png" alt="">
-                <br><br><br><p>Hilsen Juan Carlos Pequeno</p>
-              </div>
+            <div id="signature-wrapper">
+              <img id="signature" src="img/marlene.png" alt="">
+              <br><br><br><p>Hilsen Juan Carlos Pequeno</p>
+            </div>
         </div>
       </section>
+      
       <section class="row">
         <div class="container">
           <div class="box full dark">
@@ -74,35 +71,55 @@
               <h3>Be om pristilbud</h3>
               <p>Hva ønsker du pristilbud på?</p>
 
-              <a href="#" class="button left">Cateringtjenester</a>
-              <a href="#" class="button right">Kantinedrift</a>
+              <div class="btn-wrapper">
+                <a href="javascript:void(0)" class="menuLinks button left" onclick="openMenu(event, 'catering')" id="defaultOpen"> Cateringtjenester </a>
+                <a href="javascript:void(0)" class="menuLinks button right" onclick="openMenu(event, 'canteen')"> Kantinedrift </a>
+              </div>
 
+              <div id="catering" class="tabContent">
               <h3>Om arrangementet</h3>
               <p>Da Carlo kan levere cateringtjenester til alle typer arrangementer. Fortell oss litt mer om hva du ønsker hjelp til.</p>
               <form>
-                <input type="text" id="place" name="sted" value="Sted"/>
+                <input id="place" type="text" name="sted" value="Sted"/>
                 <label for="place">Sted</label>
 
-                <input class="right" type="date" id="date" name="dato" value="Dato"/>
+                <input id="date" class="right" type="date" name="dato" value="Dato"/>
                 <label for="date">Dato</label>
 
-                <input type="text" id="guestNo" name="antallGjester" value="Antall gjester"/>
+                <input id="guestNo" type="text" name="antallGjester" value="Antall gjester"/>
                 <label for="guestNo">Antall Gjester</label>
 
-              <div class="styledSelect">
-                <select  id="meny" name="meny" value="Ønsket meny">
-                  <option value="meny1">Meny 1</option>
-                  <option value="meny2">Meny 2</option>
-                  <option value="meny3">Meny 3</option>
-                </select>
-                <label for="meny">Ønsket meny</label>
+                <div class="styledSelect">
+                  <select  id="meny" name="meny" value="Ønsket meny">
+                    <!--TODO: add text or nonchoosable option with "Ønsket meny"-->
+                    <option value="meny1">Meny 1</option>
+                    <option value="meny2">Meny 2</option>
+                    <option value="meny3">Meny 3</option>
+                  </select>
+                  <label for="meny">Ønsket meny</label>
+                </div>
+                <textarea id="cateringInfo" name="extraInfo"/>Ekstra informasjon og eventuelle spørsmål</textarea>
               </div>
 
-                <textarea id="info" name="extraInfo"/>Ekstra informasjon og eventuelle spørsmål</textarea>
+              <div id="canteen" class="tabContent">
+              <h3>Om bedriften</h3>
+              <p>Da Carlo har N års erfaring med kantinedrift. Fortell oss litt mer om din bedrift og hva du ønsker hjelp til.</p>
+              <form>
+                <input id="companyName" type="text" name="bedriftsNavn" value="Bedriftens navn"/>
+                <label for="bedriftsNavn">Bedriftens navn</label>
+
+                <input id="companyPlace" class="left" type="text" name="bedriftsSted" value="Sted"/>
+                <label for="bedriftsSted">Sted</label>
+
+                <input id="emplNo" class="right" type="text" name="antallAnsatte" value="Antall ansatte"/>
+                <label for="antallAnsatte">Antall ansatte</label>
+
+                <textarea id="canteenInfo" name="ekstraInfo"/>Hvilken type kantinedrift ønsker dere?</textarea>
+              </div>
 
                 <h3>Om deg</h3>
                 <p>Legg igjen din kontaktinformasjon, så tar vi kontakt så snart som mulig.</p>
-                <input type="text" id="name" name="navn"value="Ditt navn"/>
+                <input type="text" id="name" name="navn" value="Ditt navn"/>
                 <label for="name">Ditt navn</label>
 
                 <input type="tel" id="number" name="telefonnummer" value="Ditt telefonnummer"/>
@@ -111,8 +128,10 @@
                 <input type="email" id="email" name="epost" value="Din e-postadresse"/>
                 <label for="email">Din e-postadresse</label>
 
-                <div class="midstiltKnapp">
-                <a id="send" href="#" name="submit" class="button wide">Send prisforespørsel</a>
+                <div class="btn-wrapper">
+                <!-- TODO: finn ut om denne burde være button type submit i stedet
+                (krever i så fall ekstra css)-->
+                <a id="btnSubmit" href="#" name="submit" class="button">Send prisforespørsel</a>
                 </div>
               </form>
 
@@ -121,17 +140,20 @@
       </div>
     </div>
     </section>
-
     </main>
-
 
     <!-- page footer -->
     <footer>
-      <object name="footer" type="text/html" data="footer.inc"> </object>
+      <footer>
+        <div class="container">
+          <img src="img/dacarlo_logo.png" alt="logo" class="smallLogo">
+          <p id="footerCopyright">2016 © Da Carlo Catering</p>
+        </div>
     </footer>
 
     <!-- include javascript files in end of body, so we don't have to care
          about cross browser dom-ready crap -->
+    <script src="js/menu_panel.js"></script>
     <script src="js/sticky-header.js"></script>
   </body>
 </html>
