added pics to om.html

--- a/Template/om.html
+++ b/Template/om.html
@@ -17,7 +17,7 @@
 
     <style>
     body {
-      background: fixed url('img/webtek_kylling.jpeg') no-repeat;
+      background: fixed url('img/lmh-kokker072.jpg') no-repeat;
       background-size: cover;
       margin: 0;
     }
@@ -27,16 +27,16 @@
       top: calc(3.4 * 4rem);
     }
 
-    #row_1 {
+    #juan {
       margin-top: 4rem;
     }
 
-    #row_2 {
+    #cecare {
       margin: -4rem auto 0;
       z-index: 1;
     }
 
-    #row_3 {
+    #roberto {
       margin: -4rem auto -4rem ;
       z-index: 0;
     }
@@ -77,18 +77,18 @@
       <section class="intro">
         <div class="container">
           <h2>Om Da Carlo</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
+          <p>God mat gir en ekstra dimensjon til alle møter mellom mennesker, om det er i kantina på jobben, store høytidsdager eller uformelle firmafester.
+VI har samlet de beste smakene fra det italienske, spanske og latinamerikanske kjøkkenet og ønsker å gi dere spennende og minneverdige smaksopplevelser tilpasset den sammenheng der maten skal serveres.
+Da Carlo leverer tapas eller individuelt tilpassede menyer til enhver anledning i Oslo og omegn. Vi kan også stille med profesjonelle servitører og gi vinforslag til maten hvis det er ønskelig.
+Da Carlo har flere års erfaring med drift av kantiner og har gode referanser å vise til. Ta kontakt dersom dere ønsker kantinemat som gir arbeidsdagen et løft!</p></div>
       </section>
 
       <section class="row">
-        <div class="container" id="row_1">
+        <div class="container" id="juan">
           <div class="box left">
             <div class="text-wrapper">
               <h3>Juan Carlos</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p> Enda en kort tekst Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <!--<a href="#" class="button">Lenketekst</a>-->
+              <p> Fra min oppvekst ved Chiles langstrakte kyst har jeg lært meg å verdsette havets mangfoldige variasjon av delikatesser. Da jeg var liten opplevde jeg hvordan min mor tryllet frem de herligste smaker fra enkle basis råvarer i det chilenske kjøkkenet. Dette har jeg brakt med meg til Norge hvor jeg har jobbet mange år i restaurantbransjen og nå de siste 10 årene med drift av Nets, Teller og Visa sine kantiner i Oslo.</p>
               <div>
                 <blockquote>
                   <p>Sitat om ditt og datt Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
@@ -97,20 +97,19 @@
             </div>
           </div>
           <figure>
-            <img src="img/en-kokk.jpg" alt="" />
+            <img src="img/lmh-kokker11.jpg" alt="" />
           </figure>
         </div>
       </section>
 
       <section class="row" >
-        <div class="container" id="row_2">
+        <div class="container" id="cecare">
           <!-- TODO teksturen for .dark legger seg ikke riktig på mobil, får padding-->
           <div class="box right dark">
             <div class="text-wrapper">
-              <h3>Juan Carlos</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p> Enda en kort tekst Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <!--<a href="#" class="button">Lenketekst</a>-->
+              <h3>Cecare</h3>
+              <p>Jeg vokste opp i en liten landsby ved Toscanas kyst. Foreldrene mine kommer fra Sardinia, og på den måten har jeg fått tilegnet meg matkultur fra to viktige tradisjoner innen det italienske kjøkken. Familien min har arbeidet I flere generasjoner med jordbruk, husdyrhold og produksjon av meiriprodukter, og fra disse erfaringene kommer kunnskapene jeg har om gode råvarer og foredlingen av disse. Jeg har bodd i Norge siden 2002, og har i mange år jobbet hos San Lorenzo i Vika, en italiensk restaurant og pizzeria. I kjøkkenet til San Lorenzo utvidet jeg min kunnskap om tradisjonelle matretter fra flere regioner i Italia.
+              Det er det jeg elsker å gjøre: lage ekte italiensk mat med tradisjoner tilbake til antikkens Roma!</p>
               <div>
                 <blockquote>
                   <p>Sitat om ditt og datt Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
@@ -119,19 +118,17 @@
             </div>
           </div>
           <figure>
-            <img src="img/en-kokk.jpg" alt="" />
+            <img src="img/lmh-kokker12.jpg" alt="" />
           </figure>
         </div>
       </section>
 
       <section class="row">
-        <div class="container"  id="row_3">
+        <div class="container"  id="roberto">
           <div class="box left">
             <div class="text-wrapper">
-              <h3>Juan Carlos</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p> Enda en kort tekst Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <!--<a href="#" class="button">Lenketekst</a>-->
+              <h3>Roberto</h3>
+              <p>I 20 år har jeg reist gjennom Spania både gastronomisk og geografisk. På min reise har jeg blitt kjent med mange steder, ulike kjøkken og tradisjonsrike spanske restauranter. Jeg har blitt innviet i kulinariske hemmeligheter! I 2008 kom jeg til Oslo og jobbet som kokk på en av Oslos største tapasrestauranter og var med å sette standard for god iberisk mat i hovedstaden. Med min kunnskap og erfaringer vil jeg bidra til at Da Carlo leverer mat av ypperste klasse.</p>
               <div>
                 <blockquote>
                   <p>Sitat om ditt og datt Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
@@ -140,7 +137,7 @@
             </div>
           </div>
           <figure>
-            <img src="img/en-kokk.jpg" alt="" />
+            <img src="img/lmh-kokker13.jpg" alt="" />
           </figure>
         </div>
       </section>
@@ -151,7 +148,7 @@
     <section class="cta">
       <div class="container">
         <p>Ta gjerne kontakt for et uforpliktende tilbud.</p>
-        <a href="../kontakt.html" class="button" style="float: right; display=inline;">Kontakt oss</a>
+        <a href="kontakt.html" class="button" style="float: right; display=inline;">Kontakt oss</a>
             <p style="font-size: 1.8rem; display=inline;">+47 428 83 247</p>
           <p style="font-size=1rem;"><a href="mailto:epost@epost.no">epost</a>
           </p>
